# scratch-C-

code/DisplayImage/: DisplayImage  cmake_install.cmake
projects/BoostSerial/: BoostSerial  BoostSerial.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  SimpleSerial.h  cmake_install.cmake  serial.h
projects/BoostSerial/test/: test.ino
projects/DetectRedObject/: CMakeCache.txt  CMakeLists.txt  DetectRedObject  DetectRedObject.cpp  Makefile  cmake_install.cmake
projects/DilateImage/: CMakeCache.txt  CMakeLists.txt  DilateImage  DilateImage.cpp  Makefile  cmake_install.cmake
projects/DisplayImage/: CMakeCache.txt  CMakeLists.txt  DisplayImage  Makefile  cmake_install.cmake
projects/ReadArduino/: CMakeCache.txt  CMakeLists.txt  Makefile  ReadArduino.cpp  Serial.cpp  Serial.h  cmake_install.cmake
projects/SURFKeypointMatching/: CMakeCache.txt  CMakeLists.txt  Makefile  SURFKeypointMatching  SURFKeypointMatching.cpp  cmake_install.cmake
projects/StereoDisparityMap/: CMakeCache.txt  CMakeLists.txt  Makefile  StereoDisparityMap  StereoDisparityMap.cpp  cmake_install.cmake
projects/TaskScheduler/: CMakeCache.txt  CMakeLists.txt  Makefile  TaskScheduler.cpp  cmake_install.cmake  scheduler.h  scheduler2.h
projects/WriteImageToFile/: CMakeCache.txt  CMakeLists.txt  Makefile  WriteImageToFile  WriteImageToFile.cpp  cmake_install.cmake
